force-app/main/default/objects/Training__c/fields/NumberOfParticipants__c.field-meta.xml
<CustomField>
    <fullName>NumberOfParticipants__c</fullName>
    <label>Number of Participants</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>