force-app/main/default/objects/Training__c/fields/RestaurantCommission__c.field-meta.xml
<CustomField>
    <fullName>RestaurantCommission__c</fullName>
    <label>Restaurant Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>