force-app/main/default/objects/Training__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <inlineHelpText>Total price of the course, including taxes.</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>