force-app/main/default/objects/Training__c/fields/TotalTax__c.field-meta.xml
<CustomField>
    <fullName>TotalTax__c</fullName>
    <inlineHelpText>Total isolated tax amount calculated from the total price.</inlineHelpText>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>