force-app/main/default/objects/Training__c/fields/Trainer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The trainer that will perform the training</description>
    <label>Trainer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>