force-app/main/default/objects/Training__c/fields/Training_Course__c.field-meta.xml
<CustomField>
    <fullName>Training_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Course</label>
    <referenceTo>Training_Course__c</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>