force-app/main/default/objects/Training__c/fields/TrainingCourse__c.field-meta.xml
<CustomField>
    <fullName>TrainingCourse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Course</label>
    <referenceTo>TrainingCourse__c</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>