force-app/main/default/objects/Training__c/fields/TrainingDuration__c.field-meta.xml
<CustomField>
    <fullName>TrainingDuration__c</fullName>
    <inlineHelpText>Duration is calculated as follows: Number Of Days * Training Hours Per Day + Preparation Time + Review Time</inlineHelpText>
    <label>Training Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>