force-app/main/default/objects/Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Restaurant__c</columns>
    <columns>RestaurantCommission__c</columns>
    <columns>Status__c</columns>
    <columns>CompletionDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>